--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -16,7 +16,10 @@ set(SOURCE_FILES
         ${SRC}/tools/glslShaderObject.cpp
         ${SRC}/tools/glslProgramObject.h
         ${SRC}/tools/glslShaderObject.h    
-        ${SRC}/tools/virtualGizmo.h
+        ${SRC}/tools/vGizmoMath.h
+        ${SRC}/tools/vGizmoConfig.h
+        ${SRC}/tools/vGizmo.h
+        ${SRC}/tools/vGizmo.h
         ${SRC}/tools/transforms.h        
         ${SRC}/tools/oglAxes.cpp
         ${SRC}/tools/oglAxes.h
