--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,3 +1,15 @@
+#------------------------------------------------------------------------------
+#  Copyright (c) 2018-2024 Michele Morrone
+#  All rights reserved.
+#
+#  https://michelemorrone.eu - https://glchaosp.com - https://brutpitt.com
+#
+#  X: https://x.com/BrutPitt - GitHub: https://github.com/BrutPitt
+#
+#  direct mail: brutpitt(at)gmail.com - me(at)michelemorrone.eu
+#
+#  This software is distributed under the terms of the BSD 2-Clause license
+#------------------------------------------------------------------------------
 cmake_minimum_required(VERSION 3.10)
 
 set(BUILD_EMSCRIPTEN FALSE CACHE BOOL FALSE)
