vGizmo3D v4.0 - easy_axamples

--- a/easy_examples/cube_OpenGL/emscripten/CMakeLists.txt
+++ b/easy_examples/cube_OpenGL/emscripten/CMakeLists.txt
@@ -36,7 +36,8 @@ set(SOURCE_FILES
         ${SRC}/oglDebug.h
         ${VGIZMO_DIR}/vGizmo3D.h
         ${VGIZMO_DIR}/vgMath.h
-        ${VGIZMO_DIR}/vgConfig.h
+        ${VGIZMO_DIR}/vGizmo3D_config.h
+        ${VGIZMO_DIR}/vgMath_config.h
         ${COMMONS_DIR}/shadersAndModel.h)
 
 set(SOURCE_FILES_GLAD
